Add working-directory to build steps

--- a/.github/workflows/build-azuredeploy-test.yml
+++ b/.github/workflows/build-azuredeploy-test.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      working-directory: src/
+      run: dotnet restore BlazingPizza.sln
     - name: Build
-      run: dotnet build --no-restore
+      working-directory: src/
+      run: dotnet build BlazingPizza.sln --no-restore
