--- a/.github/workflows/Build-Deploy-Test.yml
+++ b/.github/workflows/Build-Deploy-Test.yml
@@ -31,7 +31,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_SERVER_NAME }}
-        package: ${{ env.AZURE_WEBAPP_SERVER_PACKAGE_PATH }}
+        package: src/BlazingPizza.Server/${{ env.AZURE_WEBAPP_SERVER_PACKAGE_PATH }}
         publish-profile: ${{ env.AZURE_WEBAPP_SERVER_PUBLISH_PROFILE }}
     - name: Publish Server to Azure
       uses: actions/upload-artifact@v1.0.0
